--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+    <h2>Welcome to the Index Page</h2>
+    <p>This is the homepage of your Flask application.</p>
+    <p>Feel free to customize this page as needed.</p>
+{% endblock %}
