added more html pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} Database Project{% endblock %}</title>
+    <title>{% block title %} Accident Report Platfrom{% endblock %}</title>
     <!--link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}"-->
 </head>
 <body>
     <header>
-        <h1>Database Project</h1>
+        <h1>Accident Report Platfrom</h1>
         <nav>
             <a href="{{ url_for('index') }}">Home</a>
         </nav>
