--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Accident Report Platfrom</h1>
+        <h1>Accident Report Platform</h1>
         <nav>
             <a href="{{ url_for('index') }}">Home</a>
         </nav>
@@ -21,7 +21,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 My Flask App</p>
+        <p>&copy; 2025  ARP Co. </p>
     </footer>
 
     
