--- a/templates/view.html
+++ b/templates/view.html
@@ -1,9 +1,34 @@
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}View Accident Log{% endblock %}
 
 {% block content %}
-    <h2>Welcome to the Index Page</h2>
-    <p>This is the homepage of your Flask application.</p>
-    <p>Feel free to customize this page as needed.</p>
+<h2>Accident Logs</h2>
+
+{% if accidents %}
+    <table border="1" cellpadding="10">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Location</th>
+                <th>Date</th>
+                <th>Reported By</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for accident in accidents %}
+            <tr>
+                <td>{{ accident.title }}</td>
+                <td>{{ accident.description }}</td>
+                <td>{{ accident.location }}</td>
+                <td>{{ accident.date }}</td>
+                <td>{{ accident.reported_by }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% else %}
+    <p>No accident reports available.</p>
+{% endif %}
 {% endblock %}
