--- a/templates/accident.html
+++ b/templates/accident.html
@@ -1,9 +1,22 @@
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Report an Accident{% endblock %}
 
 {% block content %}
-    <h2>Welcome to the Index Page</h2>
-    <p>This is the homepage of your Flask application.</p>
-    <p>Feel free to customize this page as needed.</p>
+<h2>Report an Accident</h2>
+<form method="POST" action="{{ url_for('accident') }}">
+    <label for="title">Accident Title:</label><br>
+    <input type="text" id="title" name="title" required><br><br>
+
+    <label for="description">Description:</label><br>
+    <textarea id="description" name="description" rows="4" cols="50" required></textarea><br><br>
+
+    <label for="location">Location:</label><br>
+    <input type="text" id="location" name="location" required><br><br>
+
+    <label for="date">Date of Accident:</label><br>
+    <input type="date" id="date" name="date" required><br><br>
+
+    <button type="submit">Submit Report</button>
+</form>
 {% endblock %}
