--- a/templates/base.html
+++ b/templates/base.html
@@ -4,27 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Accident Report Platfrom{% endblock %}</title>
-    <!--link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}"-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
     <header>
         <h1>Accident Report Platform</h1>
         <nav>
-            <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('index') }}" class="{% if request.endpoint == 'index' %}active{% endif %}">Home</a>
+            <a href="{{ url_for('login') }}" class="{% if request.endpoint == 'login' %}active{% endif %}">Login</a>
+            <a href="{{ url_for('register') }}" class="{% if request.endpoint == 'register' %}active{% endif %}">Register</a>
+            <a href="{{ url_for('view') }}" class="{% if request.endpoint == 'view' %}active{% endif %}">View Accidents Log</a>
+            <a href="{{ url_for('accident') }}" class="{% if request.endpoint == 'accident' %}active{% endif %}">Report an Accident</a>
         </nav>
     </header>
 
     <main>
         {% block content %}
-        
+
         {% endblock %}
     </main>
 
     <footer>
+        <button id="darkModeToggle">Dark Mode</button>
         <p>&copy; 2025  ARP Co. </p>
     </footer>
 
-    
-    <!--script src="{{ url_for('static', filename='js/main.js') }}"></script-->
+
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
