--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,22 @@
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Register as a User{% endblock %}
 
 {% block content %}
-    <h2>Welcome to the Index Page</h2>
-    <p>This is the homepage of your Flask application.</p>
-    <p>Feel free to customize this page as needed.</p>
+<h2>Register</h2>
+<form method="POST" action="{{ url_for('register') }}">
+    <label for="username">Username:</label><br>
+    <input type="text" id="username" name="username" required><br><br>
+
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="password">Password:</label><br>
+    <input type="password" id="password" name="password" required><br><br>
+
+    <label for="confirm_password">Confirm Password:</label><br>
+    <input type="password" id="confirm_password" name="confirm_password" required><br><br>
+
+    <button type="submit">Register</button>
+</form>
 {% endblock %}
