Logo and scroller images added

--- a/templates/accident.html
+++ b/templates/accident.html
@@ -8,6 +8,13 @@
     <label for="title">Accident Title:</label><br>
     <input type="text" id="title" name="title" required><br><br>
 
+    <label for="title">Accident Type:</label><br>
+    <select id="type" name="type" required>
+        <option value="">Accidents involve injuries, Incidents do not</option>
+        <option value="Accident">Accident</option>
+        <option value="Incident">Incident</option>
+    </select><br><br>
+
     <label for="description">Description:</label><br>
     <textarea id="description" name="description" rows="4" cols="50" required></textarea><br><br>
 
