--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <h2>Welcome to the Accident Report Platform</h2>
-<p>This platform allows employees to report workplace accidents and lets authorized personnel view accident logs.</p>
-<p>Please <a href="{{ url_for('login') }}">log in</a> or <a href="{{ url_for('register') }}">register</a> to get started.</p>
+<p>This platform allows employees to report workplace accidents, record first aid adminstered for accident cases and lets authorized personnel view accident logs.</p>
+<p>Please <a href="{{ url_for('login') }}">Log in</a> or <a href="{{ url_for('register') }}">Register</a> to get started.</p>
 {% endblock %}
