--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,6 +6,22 @@ body {
   color: black;
 }
 
+.logo {
+  height: 50px;
+  vertical-align: middle;
+}
+.logo-link {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+
+.sitename {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+}
+
 header {
   background-color: skyblue;
   padding: 1em;
@@ -64,7 +80,19 @@ form {
   margin-top: 1em;
 }
 
-input, textarea, button {
+#image-scroller {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#image-scroller img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+  transition: opacity 1s ease-in-out;
+}
+
+input, textarea, button, select {
   width: 90%;
   padding: 0.7em;
   border: 1px solid skyblue;
@@ -79,6 +107,7 @@ button {
   cursor: pointer;
   border: 2px solid skyblue;
   transition: background-color 0.3s ease;
+  width: 50%;
 }
 
 button:hover {
@@ -144,6 +173,8 @@ body.dark-mode button {
 
 body.dark-mode button:hover {
     background-color: navy;
+    color: white;
+    border-color: navy;
 }
 
 body.dark-mode input,
@@ -165,4 +196,22 @@ body.dark-mode th {
 body.dark-mode footer {
     color: #ccc;
     border-top: 1px solid #444;
+}
+
+#darkModeToggle {
+  margin-top: 0.5em;
+  padding: 0.5em 1em;
+  border: 2px solid skyblue;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+body.dark-mode #darkModeToggle {
+  background-color: #333;
+  color: white;
+  border-color: #555;
 }
