--- a/templates/base.html
+++ b/templates/base.html
@@ -8,14 +8,24 @@
 </head>
 <body>
     <header>
-        <h1>Accident Report Platform</h1>
+        <a href="{{ url_for('index') }}" class="logo-link">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo">
+        </a>
+        <h1 class="sitename"> Accident Report Platform</h1>
         <nav>
             <a href="{{ url_for('index') }}" class="{% if request.endpoint == 'index' %}active{% endif %}">Home</a>
             <a href="{{ url_for('login') }}" class="{% if request.endpoint == 'login' %}active{% endif %}">Login</a>
             <a href="{{ url_for('register') }}" class="{% if request.endpoint == 'register' %}active{% endif %}">Register</a>
-            <a href="{{ url_for('view') }}" class="{% if request.endpoint == 'view' %}active{% endif %}">View Accidents Log</a>
             <a href="{{ url_for('accident') }}" class="{% if request.endpoint == 'accident' %}active{% endif %}">Report an Accident</a>
+            <a href="{{ url_for('view') }}" class="{% if request.endpoint == 'view' %}active{% endif %}">View Accidents Log</a>
         </nav>
+        <div id="image-scroller" data-images='[
+          "{{ url_for("static", filename="images/scroll1.jpg") }}",
+          "{{ url_for("static", filename="images/scroll2.jpg") }}",
+           "{{ url_for("static", filename="images/scroll3.jpg") }}"
+            ]'>
+            <img id="scroller-image" src="{{ url_for('static', filename='images/scroll1.jpg') }}" alt="Slideshow">
+        </div>
     </header>
 
     <main>
@@ -25,6 +35,10 @@
     </main>
 
     <footer>
+        <a href="{{ url_for('index') }}" class="footer-logo-link">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo">
+        </a>
+        <br>
         <button id="darkModeToggle">Dark Mode</button>
         <p>&copy; 2025  ARP Co. </p>
     </footer>
