--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -76,8 +76,8 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1em;
-  margin-top: 1em;
+  gap: 0.01em;
+  margin-top: 0em;
 }
 
 #image-scroller {
@@ -98,6 +98,12 @@ input, textarea, button, select {
   border: 1px solid skyblue;
   border-radius: 5px;
   font-size: 1em;
+  gap: 0.01em;
+  margin-top: 0em;
+}
+
+#certificate-field {
+  display: none;
 }
 
 button {
@@ -214,4 +220,14 @@ body.dark-mode #darkModeToggle {
   background-color: #333;
   color: white;
   border-color: #555;
+}
+
+.flashes {
+  list-style: none;
+  padding: 12px;
+  margin: 15px 0;
+  background-color: #d1ecf1;
+  color: #0c5460;
+  border: 1px solid #bee5eb;
+  border-radius: 4px;
 }
