--- a/templates/accident.html
+++ b/templates/accident.html
@@ -6,23 +6,26 @@
 <h2>Report an Accident</h2>
 <form method="POST" action="{{ url_for('accident') }}">
     <label for="title">Accident Title:</label><br>
-    <input type="text" id="title" name="title" required><br><br>
+    <input type="text" id="title" name="title" required><br>
 
-    <label for="title">Accident Type:</label><br>
+    <label for="type">Accident Type:</label><br>
     <select id="type" name="type" required>
         <option value="">Accidents involve injuries, Incidents do not</option>
         <option value="Accident">Accident</option>
         <option value="Incident">Incident</option>
-    </select><br><br>
+    </select><br>
 
     <label for="description">Description:</label><br>
-    <textarea id="description" name="description" rows="4" cols="50" required></textarea><br><br>
+    <textarea id="description" name="description" rows="4" cols="50" required></textarea><br>
 
     <label for="location">Location:</label><br>
-    <input type="text" id="location" name="location" required><br><br>
+    <input type="text" id="location" name="location" required><br>
 
     <label for="date">Date of Accident:</label><br>
-    <input type="date" id="date" name="date" required><br><br>
+    <input type="date" id="date" name="date" required><br>
+
+    <label for="time">Time of Accident:</label><br>
+    <input type="time" id="time" name="time" required><br>
 
     <button type="submit">Submit Report</button>
 </form>
