--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,16 @@
     </header>
 
     <main>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="flashes">
+                     {% for message in messages %}
+                         <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+
         {% block content %}
 
         {% endblock %}
