--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,8 @@
 {% block content %}
 <h2>Login</h2>
 <form method="POST" action="{{ url_for('login') }}">
-    <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username" required><br><br>
+    <label for="email">Staff Email:</label><br>
+    <input type="email" id="email" name="email" required><br><br>
 
     <label for="password">Password:</label><br>
     <input type="password" id="password" name="password" required><br><br>
