--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -138,6 +138,14 @@ table {
   margin-top: 1em;
 }
 
+table, th, td {
+  border: 1px solid black;
+}
+
+td, th {
+  padding: 10px;
+}
+
 th, td {
   border: 1px solid black;
   padding: 0.5em;
