--- a/templates/view.html
+++ b/templates/view.html
@@ -6,7 +6,7 @@
 <h2>Accident Logs</h2>
 
 {% if accidents %}
-    <table border="1" cellpadding="5" cellspacing="0">
+    <table>
         <thead>
             <tr>
                 <th>Title</th>
