--- a/templates/accident.html
+++ b/templates/accident.html
@@ -3,6 +3,16 @@
 {% block title %}Report an Accident{% endblock %}
 
 {% block content %}
+
+{% if current_user.is_authenticated %}
+          <div class="user-info">
+            You are logged in as {{ current_user.firstname }}
+            <form action="{{ url_for('logout') }}" method="post" style="display:inline;">
+            <button type="submit">Logout</button>
+             </form>
+         </div>
+        {% endif %}
+
 <h2>Report an Accident</h2>
 <form method="POST" action="{{ url_for('accident') }}">
     <label for="title">Accident Title:</label><br>
@@ -35,7 +45,7 @@
     </select><br>
 
     <label for="firstaider">First Aider?</label><br>
-    <select id="firstaider" name="firstaider" required>
+    <select id="firstaider" name="firstaider">
         <option value="">Select an option</option>
         {% for fa in first_aiders %}
             <option value="{{ fa.id }}">{{ fa.firstname }} {{ fa.surname }}</option>
