--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,16 @@
 {% block title %}Homepage{% endblock %}
 
 {% block content %}
+
+{% if current_user.is_authenticated %}
+          <div class="user-info">
+            You are logged in as {{ current_user.firstname }}
+            <form action="{{ url_for('logout') }}" method="post" style="display:inline;">
+            <button type="submit">Logout</button>
+             </form>
+         </div>
+        {% endif %}
+
 <h2>Welcome to the Accident Report Platform</h2>
 <p>This platform allows employees to report workplace accidents, record first aid adminstered for accident cases and lets authorized personnel view accident logs.</p>
 <br><br>
