--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,16 @@
 {% block title %}User Login{% endblock %}
 
 {% block content %}
+
+{% if current_user.is_authenticated %}
+          <div class="user-info">
+            You are logged in as {{ current_user.firstname }}
+            <form action="{{ url_for('logout') }}" method="post" style="display:inline;">
+            <button type="submit">Logout</button>
+             </form>
+         </div>
+        {% endif %}
+
 <h2>Login</h2>
 <form method="POST" action="{{ url_for('login') }}">
     <label for="email">Staff Email:</label><br>
