--- a/templates/view.html
+++ b/templates/view.html
@@ -30,6 +30,7 @@
                 <th>First Aider</th>
                 <th>First Aid Details</th>
                 <th>Reported By</th>
+                <th> </th>
             </tr>
         </thead>
         <tbody>
@@ -51,6 +52,12 @@
                 </td>
                 <td>{{ accident.first_aid_details }}</td>
                 <td>{{ accident.reporter.firstname }} {{ accident.reporter.surname }}</td>
+                <td>
+                <a href="{{ url_for('edit_accident', accident_id=accident.id) }}">Edit</a> |
+                <form method="POST" action="{{ url_for('delete_accident', accident_id=accident.id) }}" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this accident?');">
+                    <button type="submit">Delete</button>
+                </form>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
