--- a/templates/view.html
+++ b/templates/view.html
@@ -17,7 +17,7 @@
 
 {% if accidents %}
 <h3>Accident Logs</h3>
-    <table>
+    <table class="table-wrapper">
         <thead>
             <tr>
                 <th>Title</th>
@@ -74,7 +74,7 @@
 
 {% if first_aiders %}
 <h3>First Aider's Registry</h3>
-    <table>
+    <table class="table-wrapper">
         <thead>
             <tr>
                 <th>ID</th>
